2009-03-31  Michael Hartmeier <michael.hartmeier@1und1.de>

	* http://dev.pustefix-framework.org/wiki/ZeroFourteenZeroChangeLog:
        Switched from Ant to Maven

2009-03-20  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/main/java/org/pustefixframework/config/project/parser/EditorLocationParsingHandler.java: 
	* src/main/java/org/pustefixframework/config/project/EditorLocation.java: 
	* src/main/java/org/pustefixframework/config/project/parser/PustefixContextXMLRequestHandlerParsingHandler.java: 
	* src/main/java/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java: 
	* src/main/resources/META-INF/org/pustefixframework/config/project/parser/project-config.xml: 
	Read editor location from project.xml instead of global property.

2009-03-16  Martin Leidig  <mleidig@schlund.de>

	* projects/core/xsl/include.xsl: Added support for deferring includes
	until runtime by setting the 'pfx:include' element's 'level' attribute 
	to 'runtime'. The 'part' and 'href' values can be lately bound using
	the 'pfx:part' and 'pfx:href' elements, which are evaluated at
	runtime.

2009-03-11  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/SessionContextImpl.java:
	catch all exceptions thrown in SessionStatusListeners to ensure that
	SessionAdmin.valueUnbound is called to remove session

2009-03-10  Martin Leidig  <mleidig@schlund.de>

	Added Live-Jars support.

	Modified:
	* src/de/schlund/pfixxml/resources/ModuleResourceProvider.java: Use
	ModuleSourceLocator for looking up source or unpacked module directory

	Added:
	* src/de/schlund/pfixcore/util/LiveJarInfo.java: Reads information
	about configured live jars
	* src/de/schlund/pfixxml/resources/ModuleSourceResource.java:
	ModuleResource implemtation for file system
	* src/de/schlund/pfixxml/resources/ModuleSourceLocatorRegistry.java:
	registry for ModuleResourceLocators
	* src/de/schlund/pfixxml/resources/ModuleSourceLocator.java: interface